Fixing db connection problem
Adding mainstructure to startup import sql's

--- a/local-docker-compose.yaml
+++ b/local-docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       - 3307:3306
     networks:
       - corespace
+    volumes:
+      - ./assets/mysql-dump:/docker-entrypoint-initdb.d
     logging:
       options:
         max-size: '12m'
