--- a/local-docker-compose.yaml
+++ b/local-docker-compose.yaml
@@ -22,6 +22,10 @@ services:
       - corespace
     volumes:
       - ./assets/mysql-dump:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: mysqladmin ping -h 127.0.0.1 -u $$MYSQL_USER --password=$$MYSQL_PASSWORD
+      timeout: 20s
+      retries: 10
     logging:
       options:
         max-size: '12m'
@@ -47,6 +51,10 @@ services:
       - ./services/transaction/engine/:/programm/engine
     links:
       - db
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
     networks:
       - corespace
 
